--- a/Writings/QCA/Research_Paper.org
+++ b/Writings/QCA/Research_Paper.org
@@ -18,7 +18,10 @@
 #+LATEX: industrialized economic activity ... Rarely, if ever, can so much power have been wielded by such a small number of institutions sitting outside the
 #+LATEX:  direct democratic process.}{Goldman Sachs, 2000}
 
+** Títulos
 
+- The great mortgaging and the housing financing revolution: enabling each other? An institutional fuzzy-set Qualitative Comparative Analysis (fsQCA) for 17 OECD countries (1989-2016)
+- Institutional diversity still matters? Comparing housing financing milestones using fsQCA (1989-2014)
 ** Introduction
 *** Importância do mercado imobiliário para compreender características da GFC
 *** Relação entre endividamento das famílias, preço dos imóveis e estabilidade financeira
@@ -36,6 +39,8 @@
 *** Apresentar comparação internacional e elementos institucionais
 *** Revisão da literatura empírica e incapacidade de analisar variáveis qualitativas adequadamente
 *** Revisão de VoC
+**** Discutir convergência e divergência institucional
+Pontuar também a importância de se levar em consideração se a institucionalidade é formal (legislatória) ou informal (convenção, prática bancária)
 **** Divergência na semelhança e Convergência no diferente
 ** Data and Methods
 *** Reagrupar informações institucionais de forma qualitativa
