--- a/Articles/VECM/Petrini_VECM_2021.org
+++ b/Articles/VECM/Petrini_VECM_2021.org
@@ -5,7 +5,7 @@
 * Configs :ignore:
 ** Packages :ignore:
 #+LATEX_HEADER: \addbibresource{ref.bib}
-#+LATEX_HEADER: \usepackage{svg, caption, multirow, booktabs, tabularx, subfigure, subcaption, lscape, tablefootnote, threeparttable}
+#+LATEX_HEADER: \usepackage{svg, caption, multirow, booktabs, tabularx, subfigure, subcaption, lscape, tablefootnote, threeparttable, makecell}
 #+LATEX_HEADER: \newcolumntype{b}{>{\hsize=2.3\hsize}X}
 #+LATEX_HEADER: \newcolumntype{s}{>{\hsize=.45\hsize}X}
 #+LATEX_HEADER: \newcolumntype{m}{>{\hsize=.9\hsize}X}
@@ -51,9 +51,9 @@
 #+LATEX_HEADER:\author[1]{Gabriel Petrini}
 #+LATEX_HEADER:\affil[1]{PhD Student at University of Campinas (Brazil), Email: \url{gpetrinidasilveira@gmail.com}} % Author affiliation
 #+LATEX_HEADER:\author[2]{Lucas Teixeira}
-#+LATEX_HEADER:\affil[2]{Assistent Professor at University of Campinas (Brazil), Email: \url{lucastei@unicamp.br}} % Author affiliation
+#+LATEX_HEADER:\affil[2]{Assistant Professor at University of Campinas (Brazil), Email: \url{lucastei@unicamp.br}} % Author affiliation
 #+LATEX_HEADER:\author[3]{Frankin Serrano}
-#+LATEX_HEADER:\affil[3]{Professor at Federal University of Rio de Janeiro (Brazil), Email: \url{}} % Author affiliation
+#+LATEX_HEADER:\affil[3]{Associate Professor at Federal University of Rio de Janeiro (Brazil), Email: \url{}} % Author affiliation
 
 #+PROPERTY: header-args:python :python /usr/bin/python3 :exports none :eval never-export
 #+BIND: org-latex-prefer-user-labels t
