--- a/Articles/VECM/ref.bib
+++ b/Articles/VECM/ref.bib
@@ -7740,3 +7740,19 @@
   file = {/home/gpetrini/Zotero/storage/JYDG749W/Egebo e Richardson - A MODEL OF HOUSING INVESTMENT FOR THE MAJOR OECD E.pdf},
   language = {en}
 }
+
+@techreport{albanesi_2017_Credit,
+  ids = {albanesiCreditGrowthFinancial2017a},
+  title = {Credit {{Growth}} and the {{Financial Crisis}}: {{A New Narrative}}},
+  shorttitle = {Credit {{Growth}} and the {{Financial Crisis}}},
+  author = {Albanesi, Stefania and De Giorgi, Giacomo and Nosal, Jaromir},
+  year = {2017},
+  month = aug,
+  institution = {{National Bureau of Economic Research}},
+  doi = {10.3386/w23740},
+  abstract = {A broadly accepted view contends that the 2007-09 financial crisis in the U.S. was caused by an expansion in the supply of credit to subprime borrowers during the 2001- 2006 credit boom, leading to the spike in defaults and foreclosures that sparked the crisis. We use a large administrative panel of credit file data to examine the evolution of household debt and defaults between 1999 and 2013. Our findings suggest an alternative narrative that challenges the large role of subprime credit in the crisis. We show that credit growth between 2001 and 2007 was concentrated in the prime segment, and debt to high risk borrowers was virtually constant for all debt categories during this period. The rise in mortgage defaults during the crisis was concentrated in the middle of the credit score distribution, and mostly attributable to real estate investors. We argue that previous analyses confounded life cycle debt demand of borrowers who were young at the start of the boom with an expansion in credit supply over that period.},
+  file = {/home/gpetrini/Zotero/storage/8BH8YUL4/Albanesi - 2017 - Credit Growth and the Financial Crisis A New Narr.pdf;/home/gpetrini/Zotero/storage/TBQMP24J/Albanesi et al. - 2017 - Credit Growth and the Financial Crisis A New Narr.pdf;/home/gpetrini/Zotero/storage/SPHRLNV9/6174.html},
+  journal = {Working Paper},
+  number = {23740},
+  type = {NBER Working {{Paper}}}
+}
